@startuml modelo-actual

class Tablero {
    + mover(dir: Direccion)
    + agregarvehiculo(jug: vehiculo)
    + obtenerPosicion(): Celda
    + iniciarEn(celda: Celda)
}

class vehiculo {
    - movimientos: Int

    + sumarMovimientos()
    + restarMovimientos()
    + aplicarModificador(mod: Modificador)
    + aplicarSorpresa(sorp: Sorpresa)
    + mover(dir: Direccion)
}

class Calle {
    + cruzarCon(jug: vehiculo)
    + proximaEsquina(esquinaActual: Celda): Celda
    + contiene(esquina: Celda): Boolean
    + agregarCelda(esquina: Celda)
}

interface Vehiculo {
    + {abstract} reemplazarVehiculo(): Vehiculo
    + {abstract} pozo()
    + {abstract} piquete()
    + {abstract} controlPolicial()
}

interface Modificador {
<<<<<<< HEAD
    + {abstract} cruzarCon(jug: vehiculo)
=======
    + {abstract} cruzarCon(jug: Jugador)
>>>>>>> dev
    + {abstract} aplicarA(veh: Vehiculo)
}

interface Sorpresa {
    + {abstract} aplicarSorpresa(mov: long): long
}

class Celda {
    - f: Int
    - c: Int

    - obtenerEsquinas(): Array<Celdas>
    - obtenerCalleDeEsquina(esquina: Celda): Calle
    + agregarCalle(calle: Calle)
    + mover(jug: vehiculo, dir: Direccion): Celda
}

class Registro {

}

class GeneradorDeCiudad {
    - filas: Int
    - columnas: Int
    + buscarCelda(celda: Celda): Celda
    - generarCeldas():
    - generarCaminos():
    - agregarCeldas(esq1: Celda, esq2: Celda, mod: Modificador)
}

interface Direccion {
    + {abstract} mover(f, c, esquinas: Array<Celdas>): Celda
}

<<<<<<< HEAD
vehiculo .up.> Sorpresa
Tablero -left-> vehiculo
=======
Jugador .up.> Sorpresa
Tablero -left-> Jugador
>>>>>>> dev
Tablero --> GeneradorDeCiudad
GeneradorDeCiudad .down.> Celda
vehiculo -left-> Vehiculo
vehiculo --> Celda
Tablero -right-> Registro
Calle -left-> Modificador
Calle .left.> vehiculo
Celda ..> vehiculo
Modificador .left.> Vehiculo
Celda "2" -- "4" Calle
Modificador .up.> vehiculo
Tablero ..> Direccion
vehiculo ..> Direccion
Celda .right.> Direccion

@enduml

@startuml interface-direccion

interface Direccion {
    + {abstract} mover(f, c, esquinas: Array<Celdas>): Celda
}

class Arriba {
    + mover(f, c, esquinas: Array<Celdas>): Celda
}

class Abajo {
    + mover(f, c, esquinas: Array<Celdas>): Celda
}

class Derecha {
    + mover(f, c, esquinas: Array<Celdas>): Celda
}

class Izquierda {
    + mover(f, c, esquinas: Array<Celdas>): Celda
}

Arriba ..|> Direccion
Abajo ..|> Direccion
Derecha .up.|> Direccion
Izquierda .up.|> Direccion

@enduml

@startuml interface-vehiculo

interface Vehiculo {
    + {abstract} reemplazarVehiculo(): Vehiculo
    + {abstract} pozo()
    + {abstract} piquete()
    + {abstract} controlPolicial()
}

class 4x4 { 
    + pozo()
    + piquete()
    + controlPolicial()
    + reemplazarVehiculo(): Vehiculo
}

class Moto {
    + pozo()
    + piquete()
    + controlPolicial()
    + reemplazarVehiculo(): Vehiculo
}

class Auto {
    + pozo()
    + piquete()
    + controlPolicial()
    + reemplazarVehiculo(): Vehiculo
}

4x4 .up.|> Vehiculo
Auto ..|> Vehiculo
Moto ..|> Vehiculo

@enduml

@startuml interface-modificador-sorpresa

interface Sorpresa {
    + {abstract} aplicarSorpresa(mov: long): long
}

interface Modificador {
    + {abstract} cruzarCon(jug: Jugador)
    + {abstract} aplicarA(veh: Vehiculo)
}

class Pozo {
    + cruzarCon(jug:Jugador)
    + aplicarA(veh: Vehiculo)
}

class ControlPolicial {
    + cruzarCon(jug:Jugador)
    + aplicarA(veh: Vehiculo)
}

class Piquete {
    + cruzarCon(jug:Jugador)
    + aplicarA(veh: Vehiculo)
}

class Favorable {
    + cruzarCon(jug:Jugador)
    + aplicarA(veh: Vehiculo)
    + aplicarSorpresa(mov: long): long
}

class Desfavorable {
    + cruzarCon(jug:Jugador)
    + aplicarA(veh: Vehiculo)
    + aplicarSorpresa(mov: long): long    
}

class CambioDeVehiculo {
    + cruzarCon(jug:Jugador)
    + aplicarA(veh: Vehiculo)
}

class Nulo {
    + cruzarCon(jug:Jugador)
    + aplicarA(veh: Vehiculo)
}

Favorable ..|> Modificador
Desfavorable .left.|> Modificador
CambioDeVehiculo .up.|> Modificador
Pozo .right.|> Modificador
Piquete ..|> Modificador
ControlPolicial .up.|> Modificador
Nulo ..|> Modificador
Desfavorable ..> Sorpresa
Favorable ..> Sorpresa

@enduml